syntax = "proto3";

package broker;

option go_package = "message-broker/proto;proto";

// The Broker service definition.
service Broker {
  rpc RegisterWorker (WorkerRequest) returns (WorkerResponse);
  rpc RegisterQueue (QueueRequest) returns (QueueResponse);
  rpc SendTask (TaskRequest) returns (TaskResponse);
}

message QueueRequest {
  string name = 1;
}

message QueueResponse {
  int32 id = 1;
  int32 status = 2;
}

message WorkerRequest {
  int32 queue = 1;
}

message WorkerResponse {
  int32 id = 1;
  int32 status = 2;
}

message TaskRequest {
  int32 queue = 1;
  bytes data = 2;
}

message TaskResponse {
  int32 id = 1;
  int32 status = 2;
}